feat: allow specifying multiple workspaces (#52)
