# plugins/terraform-backend/src/schema/openapi.yaml
@@ -17,7 +17,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/health'
-  '/organizations/{orgName}/workspaces/{workspaceName}/runs':
+  '/organizations/{orgName}/workspaces/{workspaceNames}/runs':
     get:
       description: Returns data about the recent Terraform Runs
       operationId: getRuns
@@ -28,9 +28,9 @@ paths:
           required: true
           schema:
             type: string
-        - name: workspaceName
+        - name: workspaceNames
           in: path
-          description: Name of workspace to return the runs for
+          description: Names of workspace to return the runs for, comma-separated list
           required: true
           schema:
             type: string
@@ -41,7 +41,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/run'
-  '/organizations/{orgName}/workspaces/{workspaceName}/latestRun':
+  '/organizations/{orgName}/workspaces/{workspaceNames}/latestRun':
     get:
       description: Returns data about the most recent Terraform Run
       operationId: getLatestRun
@@ -52,9 +52,9 @@ paths:
           required: true
           schema:
             type: string
-        - name: workspaceName
+        - name: workspaceNames
           in: path
-          description: Name of workspace for which to return the latest run
+          description: Names of workspace to return the runs for, comma-separated list
           required: true
           schema:
             type: string
@@ -104,6 +104,12 @@ components:
             properties:
               logs:
                 type: string
+          workspace:
+            type: object
+            nullable: true
+            properties:
+              name:
+                type: string
     latestRun:
       title: Terraform Latest Run
       description: Description of the latest terraform run
@@ -131,4 +137,10 @@ components:
           nullable: true
           properties:
             logs:
+              type: string
+        workspace:
+          type: object
+          nullable: true
+          properties:
+            name:
               type: string
