# plugins/terraform/src/hooks/types.ts
@@ -10,4 +10,7 @@ export interface Run {
   plan?: {
     logs?: string | null;
   };
+  workspace?: {
+    name?: string | null;
+  };
 }
